ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CookieConsent__c/fields/ConsentGiverId__c.field-meta.xml
<CustomField>
    <fullName>ConsentGiverId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Cookie Consent Records</relationshipLabel>
    <relationshipName>Cookie_Consent_Records</relationshipName>
    <type>Lookup</type>
</CustomField>