ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CookieConsent__c/fields/CookieConsentCategory__c.field-meta.xml
<CustomField>
    <fullName>CookieConsentCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cookie Consent Category</label>
    <referenceTo>CookieConsentCategory__c</referenceTo>
    <relationshipLabel>Cookie Consent Records</relationshipLabel>
    <relationshipName>Cookie_Consent_Records</relationshipName>
    <type>Lookup</type>
</CustomField>