ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CookieConsent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ConsentGiverId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>